cmake_minimum_required(VERSION 3.12)
project(CodeVita7Qual)

set(CMAKE_CXX_STANDARD 14)

#add_executable(CodeVita7Qual a.cpp)
#add_executable(CodeVita7Qual b.cpp)
#add_executable(CodeVita7Qual c.cpp)
add_executable(CodeVita7Qual d.cpp)
#add_executable(CodeVita7Qual e.cpp)
#add_executable(CodeVita7Qual f.cpp)