cmake_minimum_required(VERSION 3.13)
project(AISingProgrammingContest2019)

set(CMAKE_CXX_STANDARD 14)

#add_executable(AISingProgrammingContest2019 a.cpp)
#add_executable(AISingProgrammingContest2019 b.cpp)
add_executable(AISingProgrammingContest2019 c.cpp)
#add_executable(AISingProgrammingContest2019 d.cpp)
#add_executable(AISingProgrammingContest2019 e.cpp)