cmake_minimum_required(VERSION 3.13)
project(KEYENCEProgrammingContest2019)

set(CMAKE_CXX_STANDARD 14)

#add_executable(KEYENCEProgrammingContest2019 a.cpp)
#add_executable(KEYENCEProgrammingContest2019 b.cpp)
#add_executable(KEYENCEProgrammingContest2019 c.cpp)
add_executable(KEYENCEProgrammingContest2019 d.cpp)