cmake_minimum_required(VERSION 3.10)
project(MujinProgrammingChallenge2018)

set(CMAKE_CXX_STANDARD 14)

#add_executable(MujinProgrammingChallenge2018 a.cpp)
#add_executable(MujinProgrammingChallenge2018 b.cpp)
#add_executable(MujinProgrammingChallenge2018 c.cpp)
add_executable(MujinProgrammingChallenge2018 d.cpp)
#add_executable(MujinProgrammingChallenge2018 e.cpp)