cmake_minimum_required(VERSION 3.13)
project(NIKKEIProgrammingContest2019)

set(CMAKE_CXX_STANDARD 14)

#add_executable(NIKKEIProgrammingContest2019 a.cpp)
#add_executable(NIKKEIProgrammingContest2019 b.cpp)
add_executable(NIKKEIProgrammingContest2019 c.cpp)
#add_executable(NIKKEIProgrammingContest2019 d.cpp)
#add_executable(NIKKEIProgrammingContest2019 e.cpp)