cmake_minimum_required(VERSION 3.10)
project(SoundHoundInc_ProgrammingContest2018)

set(CMAKE_CXX_STANDARD 14)

#add_executable(SoundHoundInc_ProgrammingContest2018 a.cpp)
#add_executable(SoundHoundInc_ProgrammingContest2018 b.cpp)
add_executable(SoundHoundInc_ProgrammingContest2018 c.cpp)
#add_executable(SoundHoundInc_ProgrammingContest2018 d.cpp)
#add_executable(SoundHoundInc_ProgrammingContest2018 e.cpp)